= Sombrero


== HEAD

* [bug] ppost.rb v0.3.1. Using yaml file.
* [bug] Showing photo with md5.

== v0.3.0    2010-08-29

* [new] Tagging to photos.

== v0.2.3    2010-06-05

== v0.2.2    2010-06-05

== v0.2.1    2010-05-22

== v0.2.0    2010-05-15
